# OpenCV_CPP

./: .gitignore  README.md
ITK/: CMakeLists.txt  CMakePresets.json  all.h  choosePieceWisePathOrWholeOnePath.cpp  convert2Speed.cpp  main.cpp
clang_demo_folder/: DEMO  clang_demo  clang_demo.cpp  clang_demo.i  clang_demo.s  demo.cpp
clang_demo_folder/src/: max.cpp
cppLearn/: README.md  ref.md  test.cpp
cppLearn/doc/: README.md
cppLearn/inc/: string_char.h
cppLearn/src/: string_char.cpp
latex/: demo.tex  template.tex
opencv_code/: DisplayImage.cpp  README.md
opencv_code/2.Opencv初探/: 2_10_other.cpp  2_1_displayImage.cpp  2_2_openCamera.cpp  2_3_readVideo.cpp  2_4_trackBar.cpp  2_5_simpleVideoPlayer.cpp  2_6_directionKeyDetect.cpp  2_7_simpleTransformer.cpp  2_8_createVideo.cpp  2_9_exercise.cpp  temp.cpp
opencv_code/3.OpenCV数据类型/: 3_1_BasicDataType.cpp  3_2_compareMatTime.cpp  3_2_compareNumpyTime.py
opencv_code/4.图像和大型数组类型/: 4_1_Mat.cpp  4_2_MatExpr.cpp  4_3_compareNAryMatIterator.cpp  4_4_NAryMatIteratorDemo.cpp  4_5_chunkAcccessMat.cpp  4_6_sparseMat.cpp  4_7_exercise.cpp
opencv_code/5.矩阵操作/: 5_1_matOperator.cpp  5_2_exercise.cpp
opencv_code/CMakeExample/: CMakeLists.txt  DisplayImage  DisplayImage.cpp  DisplayImageDebug
opencv_code/document/: .$OpenCV_datatype.drawio.bkp  C++ Standard Libraries.xmind  OpenCV_datatype.drawio  OpenCV数据类型.xmind  绘图.pptx
opencv_python/: README.md
